--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "razorpay": "^2.9.2"
   },
-  "description": "",
   "devDependencies": {
     "nodemon": "^3.1.0"
-  }
+  },
+  "description": ""
 }
