--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.11.1",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-country-state-city": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.6",
