--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.15",
     "firebase": "^10.11.1",
+    "google-libphonenumber": "^3.2.34",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
