--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.15",
+    "chart.js": "^4.4.3",
     "firebase": "^10.11.1",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.1.4",
     "react-country-state-city": "^1.1.0",
     "react-dom": "^18.2.0",
