timer added to resend otp, image slider , reviews and rating dynamic,bg changed

--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,6 @@
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-cookie": "^7.1.4",
     "react-country-state-city": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.6",
@@ -34,6 +33,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "swiper": "^11.1.4",
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
